--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,40 +1,16 @@
-
-html, body,
-ul, ol, li,
-h1, h2, h3, h4, h5, h6, p,
-form, input, div {
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  font-family: "Avenir Next";
+  margin: 0;
+  font-family: "Lucida Grande";
 }
 
-li {
-  list-style: none;
-  font-family:'Courier New';
-
+a {
+  text-decoration: none;
 }
 
 .container {
-  background:#000000;
-  height:50px;
-}
-
-.header-logo{
-  font-size:36px;
-  padding: 10px 40px;
-  color:white;
-  float:left;
-  font-family:'Courier New';
-}
-
-.header-list li {
-  color:#fff;
-  padding: 16px 20px;
-  float: right;
-  font-family:'Courier New';
+  width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 .top-wrapper {
@@ -43,18 +19,167 @@ li {
   background-size: cover;
   color: white;
   text-align: center;
-  font-family:'Courier New';
+}
+
+.top-wrapper h1 {
+  font-size: 45px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+}
+
+.top-wrapper p {
+  opacity: 0.7;
+  margin-bottom: 3px;
+}
+
+.btn-wrapper {
+  margin: 20px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.signup {
+  background-color: #239b76;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+header {
+  height: 40px;
+  width: 100%;
+  background-color: #000000;
+  position: fixed;
+  top: 0;
+  z-index: 10
+}
+
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
+.header-left {
+  float: left;
 }
 
 .header-right {
   float: right;
   background-color: rgba(255, 255, 255, 0.3);
   transition: all 0.5s;
-  padding: 16 20px;
-  color: white;
-  display: block;
 }
 
 .header-right:hover {
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+}
+
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+.lesson h4 {
+  font-size: 15px;
+}
+
+.lesson-icon {
+  position: relative;
+}
+
+.lesson-icon p {
+  position: absolute;
+  top: 90px;
+  width: 100%;
+  color: white;
+}
+
+.txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+  color: #000000;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
+}
+
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
 }
